--- a/explore.css
+++ b/explore.css
@@ -1,9 +1,11 @@
 body {
-    width: 964px;
+    width: 100%;
     margin: 5px auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 5px;
+    
 }
+
 main h2 {
     width: 100%;
     text-align: center;
@@ -12,19 +14,36 @@ main h2 {
     float: none;
 }
 #column1 {
-    width: 300px;
-    height: 350px;
+    width: 30%;
     float: left;
     border-right: 2px solid black;
     margin-top: 15px;
 }
 #column2 {
-    width: 321px;
+    width: 30%;
     float: left;
 }
 #column3 {
-    width: 300px;
-    height: 350px;
+    width: 30%;
     float: right;
     border-left: 2px solid black;
 }
+.navbar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
+  
+  .navbar a {
+    text-decoration: none;
+    color: #333;
+    font-size: 1.1em;
+    transition: color 0.3s ease;
+  }
+  
+  .navbar a:hover {
+    color: #0077cc;
+  }
