updated styles.css to be responsive

--- a/explore.css
+++ b/explore.css
@@ -46,5 +46,21 @@ main h2 {
     color: #0077cc;
   }
   
+@media (max-width: 1085px) {
+    #column1, 
+    #column2,
+    #column3 {
+        width: 100%;
+        display: block;
+        border: none;
+    }
+}
+@media (max-width: 1085px) {
+    h2 {
+        width: 100%;
+        text-align: center;
+        display: flex;
+    }
+}
 
 
