--- a/explore.css
+++ b/explore.css
@@ -1,16 +1,11 @@
-body {
-    width: 100%;
-    margin: 5px auto;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 5px;  
-}
 main h2 {
     width: 100%;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    float: none;
 }
+
+/*
 #column1 {
     width: 30%;
     float: left;
@@ -25,7 +20,7 @@ main h2 {
     width: 30%;
     float: right;
     border-left: 2px solid black;
-}
+} */
 .navbar ul {
     list-style: none;
     padding: 0;
@@ -45,7 +40,47 @@ main h2 {
   .navbar a:hover {
     color: #0077cc;
   }
-  
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));;
+    grid-template-rows: auto;
+    gap: 1.5em;
+    max-width: 960px;
+    margin: 20px auto;
+  }
+
+  .grid-item {
+    background-color: silver;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    border: none;
+    border-radius: 8px;
+    text-align: left;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  }
+  .head {
+    grid-area: head;
+  }
+  .grid-item img {
+    max-width: 100%; 
+    height: auto;
+    display: block; 
+    margin-bottom: 15px; 
+    border-radius: 4px;
+}
+.grid-item h3 {
+    margin-top: 0; 
+    margin-bottom: 10px; 
+    color: #000080; 
+}
+.grid-item p {
+    margin-bottom: 0;
+    font-size: 0.9em;
+    color: #555;
+}
 @media (max-width: 1085px) {
     #column1, 
     #column2,
