Changed all files, added content, replaced font

--- a/explore.css
+++ b/explore.css
@@ -1,8 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Nabla&display=swap');
+
+body {
+  background-color: #ECECEC;
+}
+
 main h2 {
-    width: 100%;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.about-card p, li {
+  font-family: "Jost";
 }
 
 /*
@@ -22,80 +32,86 @@ main h2 {
     border-left: 2px solid black;
 } */
 .navbar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-  }
-  
-  .navbar a {
-    text-decoration: none;
-    color: #333;
-    font-size: 1.1em;
-    transition: color 0.3s ease;
-  }
-  
-  .navbar a:hover {
-    color: #0077cc;
-  }
-
-  .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));;
-    grid-template-rows: auto;
-    gap: 1.5em;
-    max-width: 960px;
-    margin: 20px auto;
-  }
-
-  .grid-item {
-    background-color: silver;
-    padding: 20px;
-    text-align: center;
-    font-size: 20px;
-    border: none;
-    border-radius: 8px;
-    text-align: left;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  }
-  .head {
-    grid-area: head;
-  }
-  .grid-item img {
-    max-width: 100%; 
-    height: auto;
-    display: block; 
-    margin-bottom: 15px; 
-    border-radius: 4px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
+
+.navbar a {
+  text-decoration: none;
+  color: #333;
+  font-size: 1.1em;
+  transition: color 0.3s ease;
+}
+
+.navbar a:hover {
+  color: #0077cc;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  ;
+  grid-template-rows: auto;
+  gap: 1.5em;
+  max-width: 960px;
+  margin: 20px auto;
+}
+
+.grid-item {
+  background-color: silver;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  border: none;
+  border-radius: 8px;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.head {
+  grid-area: head;
+}
+
+.grid-item img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 15px;
+  border-radius: 4px;
+}
+
 .grid-item h3 {
-    margin-top: 0; 
-    margin-bottom: 10px; 
-    color: #000080; 
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: #000080;
 }
+
 .grid-item p {
-    margin-bottom: 0;
-    font-size: 0.9em;
-    color: #555;
-}
-@media (max-width: 1085px) {
-    #column1, 
-    #column2,
-    #column3 {
-        width: 100%;
-        display: block;
-        border: none;
-    }
-}
-@media (max-width: 1085px) {
-    h2 {
-        width: 100%;
-        text-align: center;
-        display: flex;
-    }
+  margin-bottom: 0;
+  font-size: 0.9em;
+  color: #555;
 }
 
+@media (max-width: 1085px) {
 
+  #column1,
+  #column2,
+  #column3 {
+    width: 100%;
+    display: block;
+    border: none;
+  }
+}
+
+@media (max-width: 1085px) {
+  h2 {
+    width: 100%;
+    text-align: center;
+    display: flex;
+  }
+}
