--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Nabla&family=Parisienne&display=swap');
+
 body,
 h1 {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+}
+
+.highlight-explore, .highlight-word, .highlight-recent  {
+    font-family: "Parisienne";
+    font-style: oblique;
 }
 
 p,
@@ -25,7 +32,7 @@ body {
 
 h1,
 h2 {
-    color: #000080;
+    color: #333333;
 }
 
 #copyright {
@@ -63,7 +70,8 @@ main {
 
 main a:hover,
 a:focus {
-    color: #006400;
+    color: #184B48
+;
 }
 
 h2 {
@@ -71,7 +79,6 @@ h2 {
 }
 
 h1 {
-    text-transform: lowercase;
     text-align: center;
     padding-bottom: 10px;
 
@@ -111,7 +118,7 @@ main ul li {
 
 .explore-kitsap h2,
 .recent-travels h2 {
-    color: #000080;
+    color: #333333;
     font-style: oblique;
     text-align: center;
     margin-bottom: 15px;
@@ -132,7 +139,7 @@ main ul li {
 
 .explore-kitsap h3,
 .recent-travels h3 {
-    color: #006400;
+    color: #184B44;
     margin-bottom: 5px;
 }
 
