--- a/css/explore.css
+++ b/css/explore.css
@@ -85,7 +85,8 @@ main h2 {
 
 .grid-item img {
   max-width: 100%;
-  height: auto;
+  height: 200px;
+  object-fit: cover;
   display: block;
   margin-bottom: 15px;
   border-radius: 4px;
